--- a/Challenge06/index.html
+++ b/Challenge06/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container row">
+            <a href="#" class="logo">
+                <img src="logo.svg" alt="" srcset="">
+            </a>
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
